adac_semantico/jcc_files/adac.java
/* adac.java */
/* Generated By:JavaCC: Do not edit this line. adac.java */
package traductor;

import java.util.*;
import java.lang.Exception.*;
import lib.symbolTable.*;
import lib.symbolTable.exceptions.*;
import lib.errores.*;
import lib.attributes.*;
import lib.tools.*;
import java.util.Stack;


public class adac implements adacConstants {

        static SymbolTable ts = new SymbolTable();
//	static ErrorSemantico err =  new ErrorSemantico();
        static SemanticFunctions semFuncs = new SemanticFunctions();

        static Stack<Symbol> stack = new Stack<Symbol>();

    public static void main(String[] args) {
        adac parser;

        try {
                if(args.length == 0) { //entrada desde stdin
                                parser = new adac(System.in);
                        }
                        else { //entrada desde fichero en args[0]
                    parser = new adac(new java.io.FileInputStream(args[0]));
                        }
                        parser.S(); //invoca símbolo inicial de la gramática
                }
                catch (java.io.FileNotFoundException e) {
                        System.err.println ("Fichero " + args[0] + " no encontrado.");
                }
                catch (TokenMgrError e) {
                System.err.println("LEX_ERROR: " + e.getMessage());
        }
        catch (ParseException e) {
                System.err.println("SINT_ERROR: " + e.getMessage());
        }
    }

  static final public void S() throws ParseException {
    prog();
    jj_consume_token(0);
}

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void prog() throws ParseException {
    jj_consume_token(tPROC);
    jj_consume_token(tID);
    jj_consume_token(tIS);
    declaracion_variables();
    declaracion_procs_funcs();
    bloque_sentencias();
System.err.println(ts.toString());
}

  static final public void declaracion_variables() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracion();
      jj_consume_token(tPC);
    }
}

  static final public void declaracion() throws ParseException {Symbol s = null;
        Token t1;
        Attributes at = new Attributes();
    tipo_variable(at);
    lista_vars(at);
}

  static final public void tipo_variable(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tINT:{
      jj_consume_token(tINT);
at.type = Symbol.Types.INT;
      break;
      }
    case tCHAR:{
      jj_consume_token(tCHAR);
at.type = Symbol.Types.CHAR;
      break;
      }
    case tBOOL:{
      jj_consume_token(tBOOL);
at.type = Symbol.Types.BOOL;
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void lista_vars(Attributes at) throws ParseException {
    variable(at);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMA:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(tCOMA);
      variable(at);
    }
}

  static final public void variable(Attributes at) throws ParseException {Token t1, t2;
    if (jj_2_1(2)) {
      t1 = jj_consume_token(tID);
      jj_consume_token(tCORCHETEOPEN);
      t2 = jj_consume_token(tNUM);
      jj_consume_token(tCORCHETECLOSE);
semFuncs.insertArraySymbolTab(ts,t1,at,t2);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        t1 = jj_consume_token(tID);
semFuncs.insertVariableSymbolTab(ts,t1,at);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void declaracion_procs_funcs() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tFUNC:
      case tPROC:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      declaracion_proc_func();
    }
}

  static final public void declaracion_proc_func() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROC:{
      declaracion_procedimientos();
      break;
      }
    case tFUNC:{
      declaracion_funciones();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaracion_procedimientos() throws ParseException {
    cabecera_procedimiento();
    declaracion_variables();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tFUNC:
      case tPROC:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      declaracion_proc_func();
    }
    bloque_sentencias();
ts.removeBlock();
                        stack.pop();
}

  static final public void declaracion_funciones() throws ParseException {
    cabecera_funcion();
    declaracion_variables();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tFUNC:
      case tPROC:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      declaracion_proc_func();
    }
    bloque_sentencias();
ts.removeBlock();
                        stack.pop();
}

  static final public void cabecera_procedimiento() throws ParseException {Token t;
        Attributes at = new Attributes();
    jj_consume_token(tPROC);
    t = jj_consume_token(tID);
semFuncs.insertProcedureSymbolTab(ts,t);
                        stack.push(ts.getSymbol(t.image));
                        at.token = t;
                        at.type = Symbol.Types.PROCEDURE;
    jj_consume_token(tPOPEN);
    lista_parametros(at);
    jj_consume_token(tPCLOSE);
    jj_consume_token(tIS);
}

  static final public void cabecera_funcion() throws ParseException {Token t;
        Symbol.Types tipo;
        Attributes at = new Attributes();
    jj_consume_token(tFUNC);
    tipo_variable(at);
    t = jj_consume_token(tID);
semFuncs.insertFunctionSymbolTab(ts,t,at);
                        stack.push(ts.getSymbol(t.image));
                        at.token = t;
                        at.type = Symbol.Types.FUNCTION;
    jj_consume_token(tPOPEN);
    lista_parametros(at);
    jj_consume_token(tPCLOSE);
    jj_consume_token(tIS);
}

  static final public void lista_parametros(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tVAL:
    case tREF:{
      parametro(at);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tPC:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        jj_consume_token(tPC);
        parametro(at);
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
}

  static final public void parametro(Attributes at) throws ParseException {Symbol.Types tipo;
        Attributes at1 = new Attributes();
        Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tVAL:{
      jj_consume_token(tVAL);
semFuncs.insertParameterType(at1,Symbol.ParameterClass.VAL);
      break;
      }
    case tREF:{
      jj_consume_token(tREF);
semFuncs.insertParameterType(at1,Symbol.ParameterClass.REF);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    tipo_variable(at1);
    lista_parametros_formales(at,at1);
}

  static final public void lista_parametros_formales(Attributes at,Attributes at1) throws ParseException {
    parametro_formal(at,at1);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMA:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      jj_consume_token(tCOMA);
      parametro_formal(at,at1);
    }
}

  static final public void parametro_formal(Attributes at,Attributes at1) throws ParseException {Token t1, t2;
    if (jj_2_2(2)) {
      t1 = jj_consume_token(tID);
      jj_consume_token(tCORCHETEOPEN);
      t2 = jj_consume_token(tNUM);
      jj_consume_token(tCORCHETECLOSE);

    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        t1 = jj_consume_token(tID);
semFuncs.insertParametro(ts,at,at1,t1);
                //	semFuncs.insertVariableSymbolTab(ts,t1,at);

        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void bloque_sentencias() throws ParseException {
    try {
      jj_consume_token(tBEGIN);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tRET:
        case tSkL:
        case tIF:
        case tWHILE:
        case tPUTLINE:
        case tPUT:
        case tGET:
        case tID:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_8;
        }
        inst();
      }
      jj_consume_token(tEND);
    } catch (ParseException e) {
Set<Integer> conjSinc = infoParseException(e);
                conjSinc.add(tEND);
                recuperacionPanico(e.currentToken.next,conjSinc);
    }
}

  static final public void inst() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tRET:
    case tSkL:
    case tPUTLINE:
    case tPUT:
    case tGET:
    case tID:{
      inst_acaban_pc();
      break;
      }
    case tIF:
    case tWHILE:{
      inst_acaban_end();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void inst_acaban_pc() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tGET:{
        inst_leer();
        break;
        }
      case tSkL:{
        inst_saltar_linea();
        break;
        }
      case tPUT:{
        inst_escribir();
        break;
        }
      case tPUTLINE:{
        inst_escribir_linea();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        if (jj_2_3(2)) {
          inst_invoc_proc();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case tID:{
            inst_asignacion();
            break;
            }
          case tRET:{
            inst_return();
            break;
            }
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(tPC);
    } catch (ParseException e) {
Set<Integer> conjSinc = infoParseException(e);
                conjSinc.add(tPC);
                recuperacionPanico(e.currentToken.next,conjSinc);
    }
}

  static final public void inst_acaban_end() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tWHILE:{
        inst_iteracion();
        break;
        }
      case tIF:{
        inst_seleccion();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(tEND);
    } catch (ParseException e) {
Set<Integer> conjSinc = infoParseException(e);
                conjSinc.add(tEND);
                recuperacionPanico(e.currentToken.next,conjSinc);
    }
}

  static final public void inst_asignacion() throws ParseException {Attributes at1 = new Attributes(), at2 = new Attributes();
    asignable(at1);
    jj_consume_token(tASIG);
    expresion(at2);
semFuncs.checkAsignacion(at1,at2);
}

  static final public void asignable(Attributes at) throws ParseException {Attributes at1 = new Attributes();
        Token t;
    if (jj_2_4(2)) {
      t = jj_consume_token(tID);
      jj_consume_token(tCORCHETEOPEN);
      expresion(at1);
      jj_consume_token(tCORCHETECLOSE);
semFuncs.checkAsignable(ts,t,at1,at);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        t = jj_consume_token(tID);
semFuncs.checkAsignable(ts,t,at);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void inst_iteracion() throws ParseException {Attributes at = new Attributes();
    jj_consume_token(tWHILE);
    expresion(at);
semFuncs.checkBool(at);
    jj_consume_token(tDO);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tRET:
      case tSkL:
      case tIF:
      case tWHILE:
      case tPUTLINE:
      case tPUT:
      case tGET:
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      inst();
    }
}

  static final public void inst_return() throws ParseException {Attributes at = new Attributes();
        Symbol s;
        SymbolFunction sf = new SymbolFunction("",null,null);
        Token t;
    t = jj_consume_token(tRET);
    expresion(at);
semFuncs.checkFunction(stack, at);
}

  static final public void inst_leer() throws ParseException {Attributes at1 = new Attributes(), at2 = new Attributes();
    try {
      jj_consume_token(tGET);
      jj_consume_token(tPOPEN);
      asignable(at1);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tCOMA:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_10;
        }
        jj_consume_token(tCOMA);
        asignable(at2);
      }
      jj_consume_token(tPCLOSE);
semFuncs.checkAsignableGet(at1,at2);
    } catch (ParseException e) {
Set<Integer> conjSinc = infoParseException(e);
                conjSinc.add(tPCLOSE);
                recuperacionPanico(e.currentToken.next,conjSinc);
    }
}
